--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sendgrid-express",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "sendgrid express api",
   "main": "server.js",
   "scripts": {
@@ -21,10 +21,37 @@
   "dependencies": {
     "@sendgrid/mail": "^6.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "concurrently": "^4.1.2"
+    "babel-eslint": "^10.0.3",
+    "concurrently": "^5.0.2",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "husky": "^4.0.1",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.+(js|jsx)": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.+(json|css|md)": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
